<resources>
    <string name="app_name">GithubApplicationMVP</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="email">Email</string>
    <string name="blog">Blog</string>
    <string name="usertype">User type</string>
    <string name="followers">Followers</string>
    <string name="public_repos">Public repos</string>
    <string name="public_gist">Public gist</string>
    <string name="registration_date">Registration Date</string>
    <string name="hireable">Hireable</string>
    <string name="last_update">Last update</string>
    <string name="bio">Bio</string>
</resources>
